--- a/NA250B/mainwindow.ui
+++ b/NA250B/mainwindow.ui
@@ -177,7 +177,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QTextEdit" name="textEdit_3">
+    <widget class="MyTextEdit" name="textEdit_3">
      <property name="geometry">
       <rect>
        <x>180</x>
@@ -229,7 +229,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QTextEdit" name="textEdit">
+    <widget class="MyTextEdit" name="textEdit">
      <property name="geometry">
       <rect>
        <x>80</x>
@@ -583,6 +583,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>MyTextEdit</class>
+   <extends>QTextEdit</extends>
+   <header location="global">mytextedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="na250b.qrc"/>
  </resources>
